apps/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-ingress
  namespace: staging
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging"
    # acme.cert-manager.io/http01-edit-in-place: "true"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # ngninx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - staging.plussoftware.com.br
    - api.staging.plussoftware.com.br
    secretName: letsencrypt-staging-tls
  rules:
  - host: staging.plussoftware.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: api.staging.plussoftware.com.br
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: identity-svc
            port:
              number: 8082
      - path: /wallet
        pathType: Prefix
        backend:
          service:
            name: wallet-svc
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
